# destruct-training

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
destruct_training/: __init__.py
