[tool.poetry]
name = "destruct-training"
version = "0.1.0"
description = ""
authors = ["Jacob Valdez <jacob@deepshard.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
torch = "^2.5.1"
transformers = "^4.46.3"
numpy = "^2.1.3"
datasets = "^3.1.0"
deepeval = "^2.0.1"
asyncio = "^3.4.3"
nest-asyncio = "^1.6.0"
tensorboard = "^2.18.0"
sentencepiece = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
